# psy-core

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  llms.txt  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts  vitest.e2e.config.ts
.github/workflows/: ci.yml  cross-lang-e2e.yml  publish-openclaw.yml  publish-pypi.yml  publish.yml  python.yml
examples/: claude-agent.ts
examples/hermes-agent/: README.md  hermes-config.yaml  run.sh
plugins/psy-core-openclaw/: AGENT_INSTALL.md  DREAM_CATCHER.md  README.md  openclaw.plugin.json  package.json
plugins/psy-core-openclaw/skills/psy-core-dream-catcher/: SKILL.md
plugins/psy-core-openclaw/skills/psy-core-openclaw/: SKILL.md
plugins/psy-core-openclaw/src/: config.js  dream-catcher.js  index.js  ingest-client.js  observer.js  patch-parser.js  paths.js  tool-records.js  ttl-cache.js
plugins/psy-core-openclaw/test/: config.test.js  dream-catcher.test.js  ingest-client.test.js  observer.test.js  openclaw-gateway.e2e.ts  package.test.js  patch-parser.test.js  paths.test.js  real-openclaw.test.js  run-openclaw-gateway-e2e.mjs
python/psy-core-hermes/: README.md  pyproject.toml
python/psy-core-hermes/src/psy_core/hermes/: __init__.py  _version.py  cli.py  config.py  hooks.py  ingest_client.py  redaction.py  register.py  skill_stats.py  trust_layer.py  watcher.py
python/psy-core-hermes/tests/: conftest.py  test_cli.py  test_concurrency.py  test_config.py  test_hooks.py  test_ingest_client.py  test_real_hermes.py  test_redaction.py  test_register.py  test_skill_stats.py  test_watcher.py
python/psy-hermes/: README.md  pyproject.toml
python/psy-hermes/src/psy_hermes/: __init__.py  _version.py  cli.py  config.py  hooks.py  ingest_client.py  register.py  watcher.py
python/psy-hermes/tests/: conftest.py  test_cli.py  test_concurrency.py  test_config.py  test_hooks.py  test_ingest_client.py  test_real_hermes.py  test_redaction.py  test_register.py  test_watcher.py
scripts/: bench.sh  gbrain-live-operations.ts  gbrain-live.sh  integration-e2e.sh
src/: auditor.ts  canonical.ts  cli.ts  config.ts  context.ts  errors.ts  hash.ts  index.ts  ingest.ts  path-segment.ts  provider.ts  redactor.ts  seal.ts  store.ts  types.ts  verify.ts
src/adapters/anthropic-memory/: index.ts  path-guard.ts  wrap.ts
src/adapters/gbrain/: index.ts  types.ts  wrap.ts
src/adapters/langchain/: index.ts  types.ts  wrap.ts
src/adapters/langgraph/: index.ts  types.ts  wrap.ts
src/adapters/letta/: index.ts  types.ts  wrap.ts
src/adapters/mastra/: index.ts  types.ts  wrap.ts
src/adapters/mem0/: index.ts  types.ts  wrap.ts
tests/: auditor.test.ts  canonical.test.ts  cli-ingest.test.ts  cli.test.ts  config.test.ts  context.test.ts  gbrain-real.test.ts  gbrain-wrap.test.ts  hash-chain.test.ts  helpers.ts  ingest.test.ts  langchain-wrap.test.ts  langgraph-wrap.test.ts  letta-wrap.test.ts  mastra-wrap.test.ts  mem0-wrap.test.ts  memory-path-guard.test.ts  openclaw-ingest-compat.test.ts  provider.test.ts  public-api.test.ts  redactor.regression-001.test.ts  redactor.test.ts  release-metadata.test.ts  rotation.test.ts  seal.test.ts  store.test.ts  verify.test.ts  wrap.test.ts
tests/e2e/: dream-catcher-cli.e2e.ts  ts-adapters-shared-chain.e2e.ts
